# meal-planner-app

./: .gitignore  DEPLOYMENT.md  README-DB-ADAPTER.md  README-DOCKER-LAMBDA.md  README.md  TESTING.md  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
backend/: Dockerfile  Dockerfile.prod  README.md  lambda_handler.py  main.py  prepare_deployment.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
backend/app/api/routes/: groceries.py  ingredients.py  meal_plans.py  recipes.py
backend/app/db/: database.py  db_adapter.py  dynamodb.py
backend/app/db/migrations/: __init__.py  v001_add_recipe_tags.py  v002_recipe_difficulty_and_rename_prep_time.py  v003_normalize_ingredients.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/scripts/: entrypoint.sh  migrate.py  setup_dynamodb.py
backend/tests/: conftest.py  test_dynamodb.py  test_integration.py  test_main.py  test_recipes.py  test_sqlite_integration.py
frontend/: .env.production  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  run_tests.sh
frontend/src/: App.tsx  setupTests.ts
frontend/src/components/: Calendar.tsx  GroceryList.tsx  Header.tsx  RecipeDetail.tsx  RecipeList.tsx  Sidebar.tsx  ThemeToggle.tsx
frontend/src/components/__tests__/: Calendar.test.tsx
frontend/src/services/: api.ts
frontend/src/services/__tests__/: api.test.ts
scripts/: deploy_lambda.sh
terraform/: dynamodb.tf  lambda.tf  main.tf  test_terraform.py  variables.tf
